--- a/dream-planner-app/app/views/layouts/application.html.erb
+++ b/dream-planner-app/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<% if logged_in? %>
+  <%= current_user.username %>
+  <%= button_to "Log Out", session_url, method: :delete %>
+<% else %>
+   <%= button_to "Sign In", new_session_url, method: :get %>
+<% end %>
+
+<%= render 'shared/errors' %>
+
 <%= yield %>
 
 </body>
