Add goal functionality with tests

--- a/dream-planner-app/app/views/layouts/application.html.erb
+++ b/dream-planner-app/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 <body>
 
 <% if logged_in? %>
-  <%= current_user.username %>
-  <%= button_to "Log Out", session_url, method: :delete %>
+  <%= current_user.username %><br>
+  <%= link_to "Log Out", session_url, method: :delete %>
 <% else %>
-   <%= button_to "Sign In", new_session_url, method: :get %>
+   <%= link_to "Log In", new_session_url, method: :get %>
 <% end %>
 
 <%= render 'shared/errors' %>
